# ares

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_FIXES.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  DOCKER_QUICKSTART.md  DSGVO_KONFORMITÄT.md  Dockerfile  Dockerfile.streamlit  ENTERPRISE_FEATURES.md  FINAL_STATUS.md  GIT_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_v1.1.1.md  LICENSE  Makefile  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  QUICKSTART.md  README.md  README_DE.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  VERSION_1.1.0_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt  roadmap.txt  setup.ps1  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
examples/: README.md  api_client.py  example_document.txt  javascript_client.js  sample_query.py
scripts/: __init__.py  batch_upload.py  check_ollama.py  cleanup.py  create_and_push_repo.ps1  create_and_push_repo.sh  create_repo_and_push.py  export_data.py  health_check.py  init_db.py  push_to_github.ps1  push_to_github.sh
src/: __init__.py
src/api/: __init__.py  config.py  main.py  metrics.py  middleware.py  rate_limit.py  routes.py
src/core/: __init__.py  agents.py  document_processor.py  rag_engine.py
src/security/: __init__.py  pii_masker.py
src/ui/: app.py
src/utils/: __init__.py  cache.py  document_graph.py  pdf_exporter.py  retry.py  validators.py
tests/: __init__.py  conftest.py  test_document_processor.py  test_pii_masker.py  test_rag_engine.py
